fixed search input on safari

--- a/app/css/plex.css
+++ b/app/css/plex.css
@@ -8436,9 +8436,9 @@ ul.nav .dropdown-menu:after {
 }
 .sidebar-options .search-query {
   margin: 15px 0;
-  padding: 0 10px;
+  padding: 4px 10px;
   width: 100%;
-  height: 25px;
+  height: auto;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
@@ -8456,7 +8456,7 @@ ul.nav .dropdown-menu:after {
   -moz-box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.3);
   box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.3);
   font-size: 14px;
-  line-height: 25px;
+  line-height: 14px;
   color: #eee;
 }
 .sidebar-options .search-query:focus {
@@ -8736,7 +8736,7 @@ ul.nav .dropdown-menu:after {
 #music-player .player-controls {
   background: none;
 }
-.me-cannot-play {
+.me-cannotplay {
   width: 100% !important;
   height: 500px !important;
   text-align: center;
