--- a/app/less/sidebar.less
+++ b/app/less/sidebar.less
@@ -18,15 +18,15 @@
 
 	.search-query {
 		margin: 15px 0;
-		padding: 0 10px;
+		padding: 4px 10px;
 		width: 100%;
-		height: 25px;
+		height: auto;
 		.box-sizing(border-box);
 		border-color: #777;
 		background: #505050;
 		.box-shadow(0 0 0 3px rgba(0, 0, 0, .3));
 		font-size: 14px;
-		line-height: 25px;
+		line-height: 14px;
 		color: #eee;
 
 		&:focus {
